--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
   text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ 
+}
+.Homepage{
+  background-color:#D29849; 
+  border: 2px solid black;
+  margin: 30px;
+  padding:30px;
+  box-shadow: 10px 8px 16px 0;
+}
+.Homepage h1{
+  border: 2px solid black;  
+  margin: 30px;
+  padding:30px;
+  background-color:#6E6E6E ;
+
+  /* background-color:darksalmon, darkred, brown; */
+  color: orange;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Homepage h2 {
+  color:darkred;
+font-style: italic;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Post-details{
+  box-shadow: 10px 8px 16px 0 black;
+  border: 2px solid black;
+  margin: 30px;
+  padding:30px;
+  background-color:#D29849;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Post-details h2{
+  color: #3F6844;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  background-color: #D29849;
+  color: #3F6844;
+  margin: 0 30px 30px 30px;
+  padding: 5px;
+  font-weight: bolder;
+  cursor: pointer;
+  transform: translateY(4px);
+
+}
+
+.Detailspage{
+  border: 2px solid black;
+  margin: 30px;
+  padding:30px;
+  background-color:#6E6E6E ;
+}
+
+.Errorpage{
+ background-color: #3FD2C7;
+ box-shadow: 10px 8px 16px 0;
+}
+
+img{
+  /* box-shadow: 10px 8px 16px 0; */
+  padding: 20px;
 }
